--- a/Photon-Tinker/Base.lproj/Main.storyboard
+++ b/Photon-Tinker/Base.lproj/Main.storyboard
@@ -2166,31 +2166,28 @@
                         <rect key="frame" x="0.0" y="0.0" width="414" height="620"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Pairing in progress" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="VuC-qn-tRb">
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" ambiguous="YES" text="Pairing in progress" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="VuC-qn-tRb">
                                 <rect key="frame" x="128.66666666666666" y="350" width="157.99999999999997" height="17"/>
                                 <fontDescription key="fontDescription" name="Gotham-Book" family="Gotham" pointSize="17"/>
                                 <nil key="textColor"/>
                                 <nil key="highlightedColor"/>
                             </label>
-                            <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="particle-mark" translatesAutoresizingMaskIntoConstraints="NO" id="Jwn-gn-dFu">
-                                <rect key="frame" x="177" y="280" width="60" height="60"/>
-                                <constraints>
-                                    <constraint firstAttribute="width" constant="60" id="IZv-F6-68J"/>
-                                    <constraint firstAttribute="height" constant="60" id="dpA-f7-LPJ"/>
-                                </constraints>
-                            </imageView>
+                            <activityIndicatorView opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="750" verticalHuggingPriority="750" animating="YES" style="whiteLarge" translatesAutoresizingMaskIntoConstraints="NO" id="Wdp-ZS-X6W">
+                                <rect key="frame" x="189" y="292" width="37" height="37"/>
+                                <color key="color" red="0.0" green="0.61176470589999998" blue="0.83921568629999999" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                            </activityIndicatorView>
                         </subviews>
                         <color key="backgroundColor" red="0.96078431369999995" green="0.96078431369999995" blue="0.96078431369999995" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                         <constraints>
-                            <constraint firstItem="VuC-qn-tRb" firstAttribute="top" secondItem="Jwn-gn-dFu" secondAttribute="bottom" constant="10" id="84x-MN-byh"/>
-                            <constraint firstItem="Jwn-gn-dFu" firstAttribute="centerY" secondItem="oKb-9M-FBr" secondAttribute="centerY" id="98Y-N4-8Yz"/>
-                            <constraint firstItem="Jwn-gn-dFu" firstAttribute="centerX" secondItem="oKb-9M-FBr" secondAttribute="centerX" id="pz2-Eh-mF9"/>
+                            <constraint firstItem="Wdp-ZS-X6W" firstAttribute="centerX" secondItem="oKb-9M-FBr" secondAttribute="centerX" id="eTR-YF-dOI"/>
+                            <constraint firstItem="Wdp-ZS-X6W" firstAttribute="centerY" secondItem="oKb-9M-FBr" secondAttribute="centerY" id="rrj-iN-GyA"/>
                             <constraint firstItem="VuC-qn-tRb" firstAttribute="centerX" secondItem="oKb-9M-FBr" secondAttribute="centerX" id="xC6-32-qdU"/>
                         </constraints>
                         <viewLayoutGuide key="safeArea" id="oKb-9M-FBr"/>
                     </view>
                     <navigationItem key="navigationItem" title="Pairing" id="83u-4z-ZzN"/>
                     <connections>
+                        <outlet property="activityIndicatorView" destination="Wdp-ZS-X6W" id="zdn-Vt-qkT"/>
                         <segue destination="3DR-e0-Z2U" kind="show" identifier="selectNetwork" id="qKm-dU-U50"/>
                     </connections>
                 </viewController>
