vector gfx for new mesh devices

--- a/Photon-Tinker/MeshSetup.storyboard
+++ b/Photon-Tinker/MeshSetup.storyboard
@@ -31,7 +31,7 @@
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <tableView clipsSubviews="YES" contentMode="scaleToFill" keyboardDismissMode="onDrag" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="0m0-HG-mnX">
-                                <rect key="frame" x="0.0" y="60" width="375" height="491"/>
+                                <rect key="frame" x="0.0" y="57" width="375" height="494"/>
                                 <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                 <prototypes>
                                     <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" selectionStyle="default" accessoryType="disclosureIndicator" hidesAccessoryWhenEditing="NO" indentationLevel="1" indentationWidth="0.0" reuseIdentifier="deviceType" textLabel="77M-BU-7Ob" detailTextLabel="ca2-lm-KbI" imageView="bGl-uF-KHD" rowHeight="80" style="IBUITableViewCellStyleSubtitle" id="HqX-4S-y49">
@@ -67,7 +67,7 @@
                                 <sections/>
                             </tableView>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Select device type to setup" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Css-g0-0tJ">
-                                <rect key="frame" x="84" y="20" width="207" height="20"/>
+                                <rect key="frame" x="70.5" y="20" width="234" height="17"/>
                                 <fontDescription key="fontDescription" name="Gotham-Medium" family="Gotham" pointSize="17"/>
                                 <nil key="textColor"/>
                                 <nil key="highlightedColor"/>
@@ -249,7 +249,7 @@
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Pair {{device}} with your phone" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="vfP-6E-Fm5">
-                                <rect key="frame" x="51.5" y="20" width="272" height="17"/>
+                                <rect key="frame" x="52" y="20" width="271.5" height="17"/>
                                 <fontDescription key="fontDescription" name="Gotham-Medium" family="Gotham" pointSize="17"/>
                                 <nil key="textColor"/>
                                 <nil key="highlightedColor"/>
@@ -402,17 +402,13 @@
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Pairing in progress" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="8yI-7D-DKR">
-                                <rect key="frame" x="116" y="197" width="142" height="20"/>
-                                <fontDescription key="fontDescription" name="Gotham-Book" family="Gotham" pointSize="17"/>
+                                <rect key="frame" x="107.5" y="217" width="160" height="17"/>
+                                <fontDescription key="fontDescription" name="Gotham-Medium" family="Gotham" pointSize="17"/>
                                 <nil key="textColor"/>
                                 <nil key="highlightedColor"/>
                             </label>
-                            <activityIndicatorView opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="750" verticalHuggingPriority="750" animating="YES" style="whiteLarge" translatesAutoresizingMaskIntoConstraints="NO" id="JgT-IK-Ghi">
-                                <rect key="frame" x="169" y="237" width="37" height="37"/>
-                                <color key="color" red="0.0" green="0.61176470589999998" blue="0.83921568629999999" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
-                            </activityIndicatorView>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Please wait for operation to complete, do not press the home button or switch apps" textAlignment="center" lineBreakMode="tailTruncation" numberOfLines="4" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="caG-OM-kxb">
-                                <rect key="frame" x="20" y="496" width="335" height="35"/>
+                                <rect key="frame" x="20" y="501" width="335" height="30"/>
                                 <fontDescription key="fontDescription" name="Gotham-Book" family="Gotham" pointSize="15"/>
                                 <color key="textColor" white="0.33333333329999998" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                 <nil key="highlightedColor"/>
@@ -422,18 +418,15 @@
                         <constraints>
                             <constraint firstItem="8yI-7D-DKR" firstAttribute="centerX" secondItem="OmJ-yY-ecH" secondAttribute="centerX" id="3s0-sR-jfW"/>
                             <constraint firstItem="OmJ-yY-ecH" firstAttribute="leading" secondItem="caG-OM-kxb" secondAttribute="leading" constant="-20" id="C8y-Hi-STo"/>
+                            <constraint firstItem="8yI-7D-DKR" firstAttribute="centerY" secondItem="OmJ-yY-ecH" secondAttribute="centerY" constant="-50" id="GIB-QP-Y9o"/>
                             <constraint firstItem="caG-OM-kxb" firstAttribute="trailing" secondItem="OmJ-yY-ecH" secondAttribute="trailing" constant="-20" id="Ktr-ML-pXa"/>
                             <constraint firstItem="OmJ-yY-ecH" firstAttribute="bottom" secondItem="caG-OM-kxb" secondAttribute="bottom" constant="20" id="QR9-0x-wYK"/>
-                            <constraint firstItem="JgT-IK-Ghi" firstAttribute="top" secondItem="8yI-7D-DKR" secondAttribute="bottom" constant="20" id="SRy-6a-vOv"/>
-                            <constraint firstItem="JgT-IK-Ghi" firstAttribute="centerY" secondItem="OmJ-yY-ecH" secondAttribute="centerY" constant="-20" id="awY-Xp-1u8"/>
-                            <constraint firstItem="JgT-IK-Ghi" firstAttribute="centerX" secondItem="OmJ-yY-ecH" secondAttribute="centerX" id="dfy-ej-EFg"/>
                             <constraint firstItem="caG-OM-kxb" firstAttribute="centerX" secondItem="OmJ-yY-ecH" secondAttribute="centerX" id="rDc-AD-Uu1"/>
                         </constraints>
                         <viewLayoutGuide key="safeArea" id="OmJ-yY-ecH"/>
                     </view>
                     <navigationItem key="navigationItem" title="Pairing" id="ake-Lc-QxC"/>
                     <connections>
-                        <outlet property="activityIndicatorView" destination="JgT-IK-Ghi" id="3Ye-yv-zOv"/>
                         <segue destination="Xfq-Ab-khI" kind="show" identifier="selectNetwork" id="uJf-N0-ZVD"/>
                     </connections>
                 </viewController>
